爆弾タイルクッリックのイベント変更、Footerクラス実装、旗数の管理、タイマー実装

--- a/app/index.html
+++ b/app/index.html
@@ -12,14 +12,14 @@
     <h1>Title</h1>
     <br>
     <div class="main-panel">
-        <div class="title"><img src="img/bomb.png" alt="bomb" id="icon"><span id="title-text">title</span><hr></div>
+        <div class="title"><img src="img/bomb/bomb.png" alt="bomb" class="bomb-icon"><span id="title-text">title</span><img src="img/bomb/bomb.png" alt="bomb" class="bomb-icon"><hr></div>
         <div class="panel">
             contents contents contents contents contents contents contents contents
         </div>
         <hr>
         <div class="status">
-            <span class="flag">flag</span>
-            <span class="limit">time</span>
+            <span class="flag"><img src="img/flag/flag.png" alt="旗" id="flag-icon"><span id="flag-counter">flag</span></span>
+            <span class="timer"><span id="mm">00</span>:<span id="ss">00</span>:<span id="ms">00</span></span>
         </div>
     </div>
 </body>
