Titleクラス作成、Tileクラスリファクタリング

--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,7 @@
     <br>
     <div class="main-panel">
         <div class="title"><img src="img/bomb/bomb.png" alt="bomb" class="bomb-icon"><span id="title-text">title</span><img src="img/bomb/bomb.png" alt="bomb" class="bomb-icon"><hr></div>
-        <div class="panel">
-            contents contents contents contents contents contents contents contents
-        </div>
+        <div class="panel"></div>
         <hr>
         <div class="status">
             <span class="flag"><img src="img/flag/flag.png" alt="旗" id="flag-icon"><span id="flag-counter">flag</span></span>
