タイトルパネル追加

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <title>マインスイーパーゲーム!!</title>
     <link rel="stylesheet" href="style/style.css">
     <script type="module" src="js/MinesweeperGame.js"></script>
+
 </head>
 <body>
     <h1>Title</h1>
@@ -16,7 +17,7 @@
         <div class="panel"></div>
         <hr>
         <div class="status">
-            <span class="flag"><img src="img/flag/flag.png" alt="旗" id="flag-icon"><span id="flag-counter">flag</span></span>
+            <span class="flag"><img src="img/flag/flag.png" alt="旗" id="flag-icon"><span id="flag-counter">0/0</span></span>
             <span class="timer"><span id="mm">00</span>:<span id="ss">00</span>:<span id="ms">00</span></span>
         </div>
     </div>
